# zenn-wgpu-example-browser

./: .gitignore  bun.lockb  package.json  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1726510969667-0c3fb04afd386.mjs
.idx/: dev.nix
app/: entry.client.tsx  tailwind.css
app/components/: CustomSection.tsx
app/routes/: _index.tsx  colorful.tsx  normal.tsx
app/utils/: NormalOrWasmTime.ts  WasmFuncs.ts
app/utils/Colorful/: Triangle.ts  fragment.wgsl  struct.wgsl  vertex.wgsl
app/utils/SingleColor/: Triangle.ts  fragment.wgsl  vertex.wgsl
app/workers/: index.ts
moduled/: build.bash
prisma/: schema.prisma
tests/: example.spec.ts
wasms/moduled/: Cargo.toml  README.md
wasms/moduled/src/: lib.rs
wasms/moduled/src/shader/: shader.wgsl
wasms/parent/: .gitignore  Cargo.toml  LICENSE-MIT  index.html
wasms/parent/src/: main.rs
wasms/websys-wasm/: Cargo.toml  LICENSE_MIT  index.html  rust-analyzer-bootstrap.bash  rustup-stable.bash  trunk-install.bash  unstable_api_enable.bash
wasms/websys-wasm/src/: jslike_gpu_funcs.rs  lib.rs
webgpu-wasm/: bun.lockb  vite.config.ts  vite.config.ts.timestamp-1726385662240-26b24020f9154.mjs
webgpu-wasm/app/utils/: Triangle.ts  WasmFuncs.ts
webgpu-wasm/wasm/: Cargo.toml  wasm-build.bash
webgpu-wasm/wasm/src/: jslike_gpu_funcs.rs  lib.rs
